--- a/tests/index.html
+++ b/tests/index.html
@@ -23,25 +23,70 @@
 
 
 <script>
-    document.getElementById("himel").addEventListener("click", function() {
-        // Your script code here
-        // console.log("clicked before");
-        // (function(w,d,u){
-        // var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/180000|0);
-        // var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
-        // })(window,document,'https://cdn.bitrix24.es/b21371883/crm/form/loader_56.js');
-        // console.log("clicked");
-
-        // <script data-b24-form="click/56/otj53i" data-skip-moving="true">
-    (function (w, d, u) {
-        var s = d.createElement('script'); s.async = true; s.src = u + '?' + (Date.now() / 180000 | 0);
-        var h = d.getElementsByTagName('script')[0]; h.parentNode.insertBefore(s, h);
-    })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/form/loader_56.js');
-
-
-
-
-
+    document.getElementById('himeltoo').addEventListener('click', function () {
+        (function (w, d, u) {
+            var s = d.createElement('script');
+            s.async = true; s.src = u + '?' + (Date.now() / 60000 | 0);
+            var h = d.getElementsByTagName('script')[0];
+            h.parentNode.insertBefore(s, h);
+        })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/form/loader_56.js');
     });
-    
+</script>
+
+<script>
+    document.getElementById('mahibhai').addEventListener('click', function () {
+        (function (w, d, u) {
+            var s = d.createElement('script');
+            s.async = true;
+            s.src = u + '?' + (Date.now() / 60000 | 0);
+            var h = d.getElementsByTagName('script')[0];
+            h.parentNode.insertBefore(s, h);
+        })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/site_button/loader_4_6zc9s9.js');
+    });
+</script>
+
+
+<script>
+    document.getElementById('uniqueid').addEventListener('click', function () {
+        (function (w, d, u) {
+            var s = d.createElement('script');
+            s.async = true;
+            s.src = u + '?' + (Date.now() / 60000 | 0);
+            var h = d.getElementsByTagName('script')[0];
+            h.parentNode.insertBefore(s, h);
+        })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/site_button/loader_4_6zc9s9.js');
+    });
+</script>
+
+<script>
+
+    // const button = document.querySelector('[data-id="himel"]');
+
+    button.addEventListener('click', function () {
+        // Your code to handle the button click event
+        console.log('Button clicked!');
+        (function (w, d, u) {
+            var s = d.createElement('script');
+            s.async = true;
+            s.src = u + '?' + (Date.now() / 60000 | 0);
+            var h = d.getElementsByTagName('script')[0];
+            h.parentNode.insertBefore(s, h);
+        })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/site_button/loader_4_6zc9s9.js');
+    });
+
+</script>
+
+<script>
+    document.querySelector('[data-id="himel"]').addEventListener('click', function () {
+        // Your code to handle the button click event
+        console.log('Button clicked!');
+        (function (w, d, u) { 
+            var s=d.createElement('script'); 
+            s.async=true; 
+            s.src=u + '?' + (Date.now() / 60000 | 0); 
+            var h=d.getElementsByTagName('script')[0]; 
+            h.parentNode.insertBefore(s, h); 
+        })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/form/loader_56.js');
+    });
+
 </script>
