--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -15,5 +15,12 @@
 <body>
     <h1 id="title" class="heading">Hello</h1>
     <p>Lorem ipsum dolor sit amet.</p>
+
+    <ul>
+        <li class="list-item">One</li>
+        <li class="list-item">Two</li>
+        <li class="list-item">three</li>
+        <li class="list-item">four</li>
+    </ul>
 </body>
 </html>
