--- a/07_projects/bmi/index.html
+++ b/07_projects/bmi/index.html
@@ -18,8 +18,8 @@
     <div class="container">
       <h1>BMI Calculator</h1>
       <form>
-        <p><label>Height in CM: </label><input type="text" id="height" /></p>
-        <p><label>Weight in KG: </label><input type="text" id="weight" /></p>
+        <p><label>Height in CM: </label><input type="number" id="height" /></p>
+        <p><label>Weight in KG: </label><input type="number" id="weight" /></p>
         <button>Calculate</button>
         <div id="results"></div>
         <div id="weight-guide">
@@ -31,5 +31,5 @@
       </form>
     </div>
   </body>
-  <script src="chaiaurcode.js"></script>
+  <script src="app.js"></script>
 </html>
