--- a/tests/index.html
+++ b/tests/index.html
@@ -92,3 +92,23 @@
     });
 
 </script> -->
+
+<!-- <script>
+    document.querySelector('[data-id="himel"]').addEventListener('click', function () {
+        // Your code to handle the button click event
+        console.log('Button clicked!');
+        (function (w, d, u) { 
+            var s=d.createElement('script'); 
+            s.async=true; 
+            s.src=u + '?' + (Date.now() / 60000 | 0); 
+            var h=d.getElementsByTagName('script')[0]; 
+            h.parentNode.insertBefore(s, h); 
+        })(window, document, 'https://cdn.bitrix24.es/b21371883/crm/form/loader_56.js');
+    });
+
+    (function (){
+        const btn =  document.querySelector('[data-id="nav-btn"]')
+        btn.id = 'button';
+    })()
+
+</script> -->
