ui added with appeding child has done

--- a/07_projects/to-do/index.html
+++ b/07_projects/to-do/index.html
@@ -13,13 +13,20 @@
         <div class="parent">
             <h1 class="heading">Your go to ToDo app</h1>
             <div class="todo">
-                <input class="todo-box" type="text" placeholder="Enter your task">
+                <input class="todo-box" id="task" type="text" placeholder="Enter your task">
+                <input type="submit" name="" id="submit" style="display: none;">
             </div>
-            <div class="tasks">
-                <p>Hello</p>
+            <div >
+                <!-- <p class="added-task">Hello</p>
+                <p class="added-task">Hello</p> -->
+                <ul class="tasks">
+                    <!-- <li class="added-task"></li> -->
+                </ul>
             </div>
         </div>
     </div>
 </body>
+
+<script src="app.js"></script>
 
 </html>
