adding underline and removing child added

--- a/07_projects/to-do/index.html
+++ b/07_projects/to-do/index.html
@@ -19,9 +19,7 @@
             <div >
                 <!-- <p class="added-task">Hello</p>
                 <p class="added-task">Hello</p> -->
-                <ul class="tasks">
-                    <!-- <li class="added-task"></li> -->
-                </ul>
+                <ul class="tasks"></ul>
             </div>
         </div>
     </div>
