--- a/07_projects/to-do/index.html
+++ b/07_projects/to-do/index.html
@@ -13,11 +13,15 @@
         <div class="parent">
             <h1 class="heading">Your go to ToDo app</h1>
             <div class="todo">
-                <input class="todo-box" id="task" type="text" placeholder="Enter your task">
+                <input class="todo-box" id="task" type="text" placeholder="Enter your To do">
                 <input type="submit" name="" id="submit" style="display: none;">
             </div>
             <div >
                 <ul class="tasks"></ul>
+            </div>
+            <div class="message">
+                <p>Left click or single tap to complete the todo.</p>
+                <p>Right click or double tap to delete the todo.</p>
             </div>
         </div>
     </div>
