added the toggle option for each li's

--- a/07_projects/to-do/index.html
+++ b/07_projects/to-do/index.html
@@ -14,7 +14,7 @@
             <h1 class="heading">Your go to ToDo app</h1>
             <div class="todo">
                 <input class="todo-box" id="task" type="text" placeholder="Enter your To do">
-                <input type="submit" name="" id="submit" style="display: none;">
+                <!-- <input type="submit" name="" id="submit" style="display: none;"> -->
             </div>
             <div >
                 <ul class="tasks"></ul>
