reset button added

--- a/07_projects/to-do/index.html
+++ b/07_projects/to-do/index.html
@@ -23,6 +23,9 @@
                 <p>Left click or single tap to complete the todo.</p>
                 <p>Right click or double tap to delete the todo.</p>
             </div>
+            <div style="display: flex; align-items: center;">
+                <button class="reset">Reset</button>
+            </div>
         </div>
     </div>
 </body>
