all functionality added

--- a/07_projects/notes/index.html
+++ b/07_projects/notes/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Add Notes +</h1>
+        <button id="add-note-button">Add Notes+</button>
     </div>
     <div class="container">
         <div class="note-container">
@@ -18,27 +18,7 @@
                 <a href="">Delete Icon</a>
             </div>
             <div>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="note-container">
-            <div>
-                <!-- Icones -->
-                <a href="">Edit Icon</a>
-                <a href="">Delete Icon</a>
-            </div>
-            <div>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-            </div>
-        </div>
-        <div class="note-container">
-            <div>
-                <!-- Icones -->
-                <a href="">Edit Icon</a>
-                <a href="">Delete Icon</a>
-            </div>
-            <div>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <textarea cols="30" rows="10" ></textarea>
             </div>
         </div>
     </div>
