added all the functionality

--- a/07_projects/notes/index.html
+++ b/07_projects/notes/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div style="display: flex; align-items: center; width: 100%; justify-content: center;">
         <button id="add-note-button">Add Notes+</button>
+        <button id="remove-button">Remove All Notes</button>
     </div>
     <div class="container">
-        <div class="note-container">
+        <!-- <div class="note-container">
             <div>
-                <!-- Icones -->
                 <a href="">Edit Icon</a>
                 <a href="">Delete Icon</a>
             </div>
             <div>
                 <textarea cols="30" rows="10" ></textarea>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 <script src="app.js"></script>
