--- a/07_projects/async/press_key.html
+++ b/07_projects/async/press_key.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Press Key</title>
     <style>
-        body{
+        body {
             background-color: #212121;
             color: #fff;
         }
     </style>
 </head>
+
 <body>
     <div id="insert">
         <h1>Press Any Key</h1>
@@ -18,8 +20,24 @@
 </body>
 <script>
     const insertDiv = document.querySelector('#insert')
-    window.addEventListener('keydown', function(){
-
+    window.addEventListener('keydown', function (e) {
+        insertDiv.innerHTML = `
+        <div>
+            <table>
+                <tr>
+                    <th>Key</th>
+                    <th>KeyCode</th>
+                    <th>Code</th>
+                </tr>
+                <tr>
+                    <td>${e.key === " " ? "Space" : e.key}</td>
+                    <td>${e.keyCode}</td>
+                    <td>${e.code}</td>
+                </tr>
+            </table>
+        </div>
+        `
     })
 </script>
+
 </html>
