--- a/tests/index.html
+++ b/tests/index.html
@@ -8,12 +8,82 @@
 </head>
 
 <body>
-
+    <ul class="dorik-list dorik-links-u2u8uu58 " id="list-email">
+        <li class="dorik-list--item"><a href="mailto:abdullaalmamun.2111@gmail.com" class="dorik-list--link "><span
+                    class="dorik-list--icon"></span><span class="dorik-list--text">Email</span></a></li>
+    </ul>
+    <ul class="dorik-list dorik-links-7jj6gf2g " data-email="Email" id="mail">
+        <li class="dorik-list--item"><a href="" target="_blank" rel="noreferrer" class="dorik-list--link "><span
+                    class="dorik-list--icon"></span><span class="dorik-list--text">Website</span></a></li>
+        <li class="dorik-list--item"><a href="mailto:" target="_blank" rel="noreferrer" class="dorik-list--link "><span
+                    class="dorik-list--text">Email</span></a></li>
+        <li class="dorik-list--item"><a href="" target="_blank" rel="noreferrer" class="dorik-list--link "><span
+                    class="dorik-list--icon"><svg aria-hidden="true" focusable="false" data-prefix="fab"
+                        data-icon="square-instagram" class="svg-inline--fa fa-square-instagram icon icon_52386b5c"
+                        role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-testid="icon-test">
+                        <path fill="currentColor"
+                            d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z">
+                        </path>
+                    </svg></span><span class="dorik-list--text">Instagram</span></a></li>
+        <li class="dorik-list--item"><a href="" target="_blank" rel="noreferrer" class="dorik-list--link "><span
+                    class="dorik-list--icon"><svg aria-hidden="true" focusable="false" data-prefix="fab"
+                        data-icon="square-facebook" class="svg-inline--fa fa-square-facebook icon icon_gaovmvz4"
+                        role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-testid="icon-test">
+                        <path fill="currentColor"
+                            d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z">
+                        </path>
+                    </svg></span><span class="dorik-list--text">Facebook</span></a></li>
+    </ul>
 </body>
 
 </html>
 
-<script src='https://cls.addons.la/leads/new/forms/resize/expander.php' config='1'></script>
+<script>
+
+    // (function () {
+    //     const listElement = document.querySelector('#list-email');
+    //     const a = listElement.querySelector('a');
+    //     const mail = (a.attributes[0].value);
+    //     const cleanedEmail = mail.replace(/^mailto:/i, '');
+    //     // console.log(cleanedEmail);
+    //     emailInput = document.querySelector('input[data-email="hidden-mail"]');
+    //     emailInput.value = cleanedEmail;
+    // })();
+
+
+    // setTimeout(function () {
+    //     (function () {
+    //         const listElement = document.querySelector('#list-email');
+    //         const a = listElement.querySelector('a');
+    //         const mail = (a.attributes[0].value);
+    //         const cleanedEmail = mail.replace(/^mailto:/i, '');
+    //         console.log(cleanedEmail);
+    //         emailInput = document.querySelector('input[data-email="hidden-mail"]');
+    //         emailInput.value = cleanedEmail;
+    //     })();
+    // }, 1000);
+
+
+
+
+    //
+
+
+    setTimeout(function () {
+        (function () {
+            const ulElement = document.querySelector('#mail');
+            const secondLi = ulElement.querySelector('li:nth-child(2)')
+            const a = secondLi.querySelector('a')
+            const mail = (a.href);
+            const cleanedEmail = mail.replace(/^mailto:/i, '');
+            console.log(cleanedEmail);
+            emailInput = document.querySelector('input[data-email="hidden-mail"]');
+            emailInput.value = cleanedEmail;
+        })();
+    }, 1000);
+</script>
+
+<!-- <script src='https://cls.addons.la/leads/new/forms/resize/expander.php' config='1'></script> -->
 <!-- 
 
 <script data-b24-form="click/56/otj53i" data-skip-moving="true">
@@ -115,7 +185,7 @@
 
 
 
-// function forLoop () {
+<!-- // function forLoop () {
 // const arrayOfNumebers = [1,2,3,4,5,6,7,5,4,3334,4,5,4,3,2];
 
 // let newArray = [];
@@ -193,4 +263,4 @@
         ">
             <p>This is a list itemlkajsdlfkjasldkjfasdlkaoisdjfpalksdjf
                 asdfi<br>;laskjdfalskdjf<br>Plajsdasd;lfkjasdf<br>;laksdjfaßdkfjasdfiasdf</p>
-        </span></div>
+        </span></div> -->
