--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 
-<body>
+<body style="background-color: #212121; color: #212222">
     <ul class="dorik-list dorik-links-u2u8uu58 " id="list-email">
         <li class="dorik-list--item"><a href="mailto:abdullaalmamun.2111@gmail.com" class="dorik-list--link "><span
                     class="dorik-list--icon"></span><span class="dorik-list--text">Email</span></a></li>
@@ -40,6 +40,53 @@
 
 <script>
 
+    // if(true){
+    //     console.log(username, "here");
+    //     const username = "himel";
+    //     if(username === "himel"){
+    //         const website = " Youtube"
+    //         console.log(username + website)
+    //     }
+    // }
+
+    // console.log(username);
+    console.log(apple);
+    console.log(apple2);
+
+    const apple = "himel";
+    var apple2 = "alloe"
+
+    // const obj = {
+    //     name: "Himel",
+    //     roll: 1233,
+    //     key: 233
+    // }
+
+    // obj.name = "Hiiii"
+
+    // console.log(obj);
+
+    // const ee = Object.entries(obj).map(([key, value]) => {
+    //     if(key === 'name'){
+    //         return "My name is Himel"
+    //     }
+    // })
+    // const e2 = Object.entries(obj).filter(([key, value]) => key === "Himel")
+
+    // console.log(e2);
+
+    // let a = 300;
+
+    // if(true){
+    //     let a = 30;
+    //     console.log('Inner a:', a);
+    // }
+
+    // console.log('Outer a:', a);
+
+    
+
+
     // (function () {
     //     const listElement = document.querySelector('#list-email');
     //     const a = listElement.querySelector('a');
@@ -69,19 +116,19 @@
     //
 
 
-    setTimeout(function () {
-        (function () {
-            const ulElement = document.querySelector('#mail');
-            const secondLi = ulElement.querySelector('li:nth-child(2)')
-            const a = secondLi.querySelector('a')
-            const mail = (a.href);
-            const cleanedEmail = mail.replace(/^mailto:/i, '');
-            console.log(cleanedEmail);
-            emailInput = document.querySelector('input[data-email="hidden-mail"]');
-            emailInput.value = cleanedEmail;
-        })();
-    }, 1000);
-</script>
+//     setTimeout(function () {
+//         (function () {
+//             const ulElement = document.querySelector('#mail');
+//             const secondLi = ulElement.querySelector('li:nth-child(2)')
+//             const a = secondLi.querySelector('a')
+//             const mail = (a.href);
+//             const cleanedEmail = mail.replace(/^mailto:/i, '');
+//             console.log(cleanedEmail);
+//             emailInput = document.querySelector('input[data-email="hidden-mail"]');
+//             emailInput.value = cleanedEmail;
+//         })();
+//     }, 1000);
+// </script>
 
 <!-- <script src='https://cls.addons.la/leads/new/forms/resize/expander.php' config='1'></script> -->
 <!-- 
