--- a/tests/test.html
+++ b/tests/test.html
@@ -501,6 +501,18 @@ var container = document.getElementsByClassName('dorik-iframe')
 
 
 
+	function hello(){
+    console.log("Number value",{{Number}});// this is number type - for the number type we need to get the value without the ""
+    console.log("String Value:","{{name}}");// this is string type
+    console.log("String Value:","{{name}}");// this is string type
+    console.log("String Value:","{{name}}");// this is string type
+    console.log("String Value:","{{name}}");// this is string type
+    console.log("String Value:","{{name}}");// this is string type
+    console.log("String Value:","{{name}}");// this is string type
+}
+
+// Call hello() every 1000 milliseconds (1 second)
+setInterval(hello, 1000);
 
 
 
