--- a/tests/ner.html
+++ b/tests/ner.html
@@ -1,158 +1,51 @@
-<!--
-// v0 by Vercel.
-// https://v0.dev/t/LDqsFOBuzjS
--->
+<p align="center">
+  <img src="./mathis.svg" alt="Hi there, I'm Mathis" />
+</p>
 
-<div class="border rounded-lg overflow-hidden">
-  <div class="relative w-full overflow-auto">
-    <table class="w-full caption-bottom text-sm">
-      <thead class="[&amp;_tr]:border-b">
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted bg-gray-900 text-white">
-          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
-            Description
-          </th>
-          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
-            Meta Cloud
-          </th>
-          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
-            Azure
-          </th>
-          <th class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0">
-            AWS
-          </th>
-        </tr>
-      </thead>
-      <tbody class="[&amp;_tr:last-child]:border-0">
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Compute</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook Compute</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Virtual Machines</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">EC2</td>
-        </tr>
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Storage</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook Storage</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Blob Storage</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">S3</td>
-        </tr>
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Database</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook Database</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Cosmos DB</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">RDS</td>
-        </tr>
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Networking</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook Networking</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Virtual Network</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">VPC</td>
-        </tr>
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Security</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook Security</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Key Vault</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">IAM</td>
-        </tr>
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Analytics</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook Analytics</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Synapse Analytics</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Athena</td>
-        </tr>
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">AI/ML</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook AI/ML</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Cognitive Services</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">SageMaker</td>
-        </tr>
-        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Serverless</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Facebook Serverless</td>
-          <td class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">Functions</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+<h2 align="center">
+💻 Tech Stack
+</h2>
 
-<script>
-  /**
- * v0 by Vercel.
- * @see https://v0.dev/t/LDqsFOBuzjS
- * Documentation: https://v0.dev/docs#integrating-generated-code-into-your-nextjs-app
- */
-import { Table, TableHeader, TableRow, TableHead, TableBody, TableCell } from "@/components/ui/table"
+<p align="center">
+  <img src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&amp;logo=css3&amp;logoColor=white" alt="CSS3"> 
+  <img src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&amp;logo=html5&amp;logoColor=white" alt="HTML5"> 
+  <img src="https://img.shields.io/badge/php-%23777BB4.svg?style=for-the-badge&amp;logo=php&amp;logoColor=white" alt="PHP"> 
+  <img src="https://img.shields.io/badge/javascript-%23323330.svg?style=for-the-badge&amp;logo=javascript&amp;logoColor=%23F7DF1E" alt="JavaScript"> 
+  <img src="https://img.shields.io/badge/typescript-%23007ACC.svg?style=for-the-badge&amp;logo=typescript&amp;logoColor=white" alt="TypeScript">
+  <img src="https://img.shields.io/badge/Cloudflare-F38020?style=for-the-badge&amp;logo=Cloudflare&amp;logoColor=white" alt="Cloudflare"> 
+  <img src="https://img.shields.io/badge/vercel-%23000000.svg?style=for-the-badge&logo=vercel&logoColor=white" alt="Vercel">
+  <img src="https://img.shields.io/badge/tailwindcss-%2338B2AC.svg?style=for-the-badge&amp;logo=tailwind-css&amp;logoColor=white" alt="TailwindCSS">
+  <img src="https://img.shields.io/badge/express.js-%23404d59.svg?style=for-the-badge&amp;logo=express&amp;logoColor=%2361DAFB" alt="Express.js"> 
+  <img src="https://img.shields.io/badge/JWT-black?style=for-the-badge&amp;logo=JSON%20web%20tokens" alt="JWT"> 
+  <img src="https://img.shields.io/badge/Next-black?style=for-the-badge&amp;logo=next.js&amp;logoColor=white" alt="Next JS"> 
+  <img src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&logo=node.js&logoColor=white" alt="Node.Js">
+  <img src="https://img.shields.io/badge/react-%2320232a.svg?style=for-the-badge&amp;logo=react&amp;logoColor=%2361DAFB" alt="React">  
+  <img src="https://img.shields.io/badge/React%20Hook%20Form-%23EC5990.svg?style=for-the-badge&logo=reacthookform&logoColor=white" alt="React Hook Form">
+  <img src="https://img.shields.io/badge/docker-%230db7ed.svg?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
+  <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?style=for-the-badge&amp;logo=mongodb&amp;logoColor=white" alt="MongoDB"> 
+  <img src="https://img.shields.io/badge/mysql-%2300f.svg?style=for-the-badge&amp;logo=mysql&amp;logoColor=white" alt="MySQL"> 
+  <img src="https://img.shields.io/badge/postgres-%23316192.svg?style=for-the-badge&amp;logo=postgresql&amp;logoColor=white" alt="Postgres"> 
+  <img src="https://img.shields.io/badge/Git-fc6d26?style=for-the-badge&logo=git&logoColor=white" alt="Git">
+</p>
 
-export default function Component() {
-  return (
-    <div className="border rounded-lg overflow-hidden">
-      <Table>
-        <TableHeader>
-          <TableRow className="bg-gray-900 text-white">
-            <TableHead>Description</TableHead>
-            <TableHead>Meta Cloud</TableHead>
-            <TableHead>Azure</TableHead>
-            <TableHead>AWS</TableHead>
-          </TableRow>
-        </TableHeader>
-        <TableBody>
-          <TableRow>
-            <TableCell>Compute</TableCell>
-            <TableCell>Facebook Compute</TableCell>
-            <TableCell>Virtual Machines</TableCell>
-            <TableCell>EC2</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>Storage</TableCell>
-            <TableCell>Facebook Storage</TableCell>
-            <TableCell>Blob Storage</TableCell>
-            <TableCell>S3</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>Database</TableCell>
-            <TableCell>Facebook Database</TableCell>
-            <TableCell>Cosmos DB</TableCell>
-            <TableCell>RDS</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>Networking</TableCell>
-            <TableCell>Facebook Networking</TableCell>
-            <TableCell>Virtual Network</TableCell>
-            <TableCell>VPC</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>Security</TableCell>
-            <TableCell>Facebook Security</TableCell>
-            <TableCell>Key Vault</TableCell>
-            <TableCell>IAM</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>Analytics</TableCell>
-            <TableCell>Facebook Analytics</TableCell>
-            <TableCell>Synapse Analytics</TableCell>
-            <TableCell>Athena</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>AI/ML</TableCell>
-            <TableCell>Facebook AI/ML</TableCell>
-            <TableCell>Cognitive Services</TableCell>
-            <TableCell>SageMaker</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>Serverless</TableCell>
-            <TableCell>Facebook Serverless</TableCell>
-            <TableCell>Functions</TableCell>
-            <TableCell>Lambda</TableCell>
-          </TableRow>
-          <TableRow>
-            <TableCell>Containers</TableCell>
-            <TableCell>Facebook Containers</TableCell>
-            <TableCell>Container Instances</TableCell>
-            <TableCell>ECS</TableCell>
-          </TableRow>
-        </TableBody>
-      </Table>
-    </div>
-  )
-}
-</script>
+<p align="center">
+  <img src="https://img.shields.io/badge/apple-000000?style=for-the-badge&amp;logo=apple&amp;logoColor=white" alt="apple">
+</p>
+
+<details>
+  <summary><h4 align="center">
+  📊 GitHub Stats
+  </h2></summary>
+  
+  <h2 align="center">
+  📊 GitHub Stats
+  </h2>
+  
+  <p align="center">
+    <img src="./github-metrics.svg" alt="Metrics" />
+  </p>
+  
+  <!-- ![](https://github-readme-stats.vercel.app/api?username=Maaaathis&theme=dark&hide_border=false&include_all_commits=true&count_private=true)<br/>
+  ![](https://github-readme-streak-stats.herokuapp.com/?user=Maaaathis&theme=dark&hide_border=false)<br/>
+  ![](https://github-readme-stats.vercel.app/api/top-langs/?username=Maaaathis&theme=dark&hide_border=false&include_all_commits=true&count_private=true&layout=compact) -->
+</details>
