--- a/tests/res.html
+++ b/tests/res.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="helllo-asdf asdlasdf jasdkfj asldkhf asdoifh ">
     <title>Document</title>
 </head>
 
