--- a/tests/review22.html
+++ b/tests/review22.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Reviews</title>
     <style>
-        * {
+        /* * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -17,7 +17,7 @@
             background-color: #202124;
             color: white;
             padding: 20px;
-        }
+        } */
 
         .container {
             max-width: 1200px;
@@ -339,9 +339,9 @@
         // Initialize and fetch reviews
         fetchReviews();
 
-        // setInterval(()=>{
-        //     navigate(1);
-        // }, 3000)
+        setInterval(()=>{
+            navigate(1);
+        }, 3000)
     </script>
 
 </body>
